2006-09-27  Jason R. Mastaler  <jason@mastaler.com>

	* Pending.py: Modified to use new Tmda.Queue interface.
	
	(Queue.cleanQueue): Removed.  Functionality moved into
	Queue.Queue.

	* Util.py (pager): Now accepts a string rather than a filepath.

	(pickleit): Use 'protocol' argument as introduced in Python 2.3.
	Also make the default protocol the new efficient
	binary storage format compatible with Python2.3 and up.

2006-09-19  Jason R. Mastaler  <jason@mastaler.com>

	* AutoResponse.py: Remove arabic -> iso-8859-6 alias.  UTF-8 is
	what's used for Arabic these days AFAIK.

2004-03-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Pending.py (Queue.listDeliveredIds): Removed.
	(Queue.listConfirmedIds): Ditto.
	(Queue.listReleasedIds): Ditto.
	(Queue.checkDelivered): Ditto.
	(Message.wasDelivered): Ditto.
	
2004-03-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py: Removed CONFIRM_ACCEPT_ALREADY_CONFIRMED_NOTIFY,
	CONFIRM_ACCEPT_ALREADY_RELEASED_NOTIFY
	CONFIRM_ACCEPT_INITIAL_NOTIFY.  Restored CONFIRM_ACCEPT_NOTIFY.

2004-03-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (TMDARC): Allow TMDARC to be specified by
	GLOBAL_TMDARC if $TMDARC is not set.

2004-02-20  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py: Removed BOUNCE_TEXT_* and CONFIRM_ACCEPT_TEXT_* in
	favour of bounce_*.txt and confirm_accept_*.txt	templates.

	New variables: ACTION_MISSING_PENDING,
	ACTION_INVALID_CONFIRMATION,
	CONFIRM_ACCEPT_ALREADY_CONFIRMED_NOTIFY,
	CONFIRM_ACCEPT_ALREADY_RELEASED_NOTIFY
	CONFIRM_ACCEPT_INITIAL_NOTIFY

2004-02-17  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (wraptext): Utilize the new builtin textwrap module.
	
2004-02-05  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (_path_vars): New dict to hold variables that
	contain a pathname, and therefore should be run through
	os.path.expandusers().
	
2004-02-05  Jason R. Mastaler  <jason@mastaler.com>
